--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "Sparx Bookwork Tracker",
     "version": "1.0.0",
-    "description": "Tracks your answers and shows you the answer to bookwork checks. Also, includes option to auto-click 'next' buttons. Less work, More progress! 💪",
+    "description": "Tracks your answers and shows you the answer to bookwork checks. Also includes more time-saving features! Less work, More progress! 💪",
     "icons": {
       "16": "images/icon16.png",
       "48": "images/icon48.png",
